@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "20.27.2",
-    "cksum": "1291808617 30462",
+    "version": "20.27.3",
+    "cksum": "3876528905 30472",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -311,7 +311,7 @@
                 "type": {
                     "type": {"key": {
                         "type": "string",
-                        "enum": ["set", ["ipv6", "str", "mac"]]}}}},
+                        "enum": ["set", ["ipv6", "str", "mac", "domain"]]}}}},
             "isRoot": true},
         "Connection": {
             "columns": {
